<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/new_bg2x" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="80dip" >

        <ImageView
            android:id="@+id/helper1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/launcher_more_lostfound2x" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/helper1"
            android:layout_marginLeft="20dp"
            android:text="@string/swzl"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/helper2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/launcher_more_tel2x" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/helper2"
            android:layout_centerHorizontal="true"
            android:text="@string/cydh"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/helper3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:src="@drawable/launcher_more_pushfromcloud2x" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/helper3"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:text="@string/yygx"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="240dip" >

        <ImageView
            android:id="@+id/helper4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/launcher_more_signin2x" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/helper4"
            android:layout_marginLeft="20dp"
            android:text="@string/jcxz"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/helper5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/launcher_more_login2x" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/helper4"
            android:layout_centerHorizontal="true"
            android:text="@string/gywm"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <include layout="@layout/top_bar" />

    <include layout="@layout/bottom_bar" />

    <RelativeLayout
        android:id="@+id/level2"
        android:layout_width="240dip"
        android:layout_height="155dip"
        android:layout_gravity="bottom|center" >

        <ImageButton
            android:id="@+id/c1"
            android:layout_width="80dip"
            android:layout_height="88dip"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="2dip"
            android:background="@drawable/zx_select" />

        <ImageButton
            android:id="@+id/c2"
            android:layout_width="88dip"
            android:layout_height="86dip"
            android:layout_marginLeft="19dip"
            android:layout_marginTop="16dip"
            android:background="@drawable/gl_select" />

        <ImageButton
            android:id="@+id/c3"
            android:layout_width="94dip"
            android:layout_height="98dip"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/hy_select" />

        <ImageButton
            android:id="@+id/c4"
            android:layout_width="88dip"
            android:layout_height="88dip"
            android:layout_marginLeft="131dip"
            android:layout_marginTop="16dip"
            android:background="@drawable/bm_select" />

        <ImageButton
            android:id="@+id/c5"
            android:layout_width="88dip"
            android:layout_height="88dip"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/bx_select" />

        <ImageButton
            android:id="@+id/navball1"
            android:layout_width="110dip"
            android:layout_height="85dip"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="72dp"
            android:background="@drawable/navball" />
    </RelativeLayout>

</FrameLayout>